# provenquant-lib

./: CLAUDE.md  pyproject.toml
examples/: feature_selection.ipynb  meta_labeling.ipynb
examples/core/: bars.ipynb  feature_selection.ipynb  meta_labeling.ipynb
provenquant/adapters/: freqtrade.py
provenquant/core/: bars.py  feature_engineer.py  feature_selection.py  labeling.py  metric.py  sample_weight.py  sample_weights.py
provenquant/core/cross_validation/: __init__.py  combinatorial_purged_k_fold.py  purged_k_fold.py  sliding_window_split.py
provenquant/core/metric/: __init__.py
provenquant/core/splitter/: __init__.py  sliding_window_split.py
provenquant/utils/: __init__.py  batch_dataframe.py  merge.py
tests/: conftest.py
tests/core/: test_bars.py  test_feature_engineer.py  test_feature_selection.py  test_labeling.py  test_sample_weight.py
tests/core/cross_validation/: test_combinatorial_purged_k_fold.py  test_purged_k_fold.py
tests/core/splitter/: test_sliding_window_split.py
tests/utils/: batch_dataframe_test.py  merge_test.py
