[project]
name = "provenquant"
version = "0.1.0"
description = "A library for bridging academic financial research to production trading."
authors = [
    {name = "Sukrit Sunama",email = "sunama.sukrit@gmail.com"}
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Sunama/provenquant-lib"
keywords = ["finance", "machine-learning", "quant", "trading", "freqtrade"]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "optuna (>=4.7.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "provenquant"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "mkdocstrings (>=1.0.2,<2.0.0)",
    "notebook (>=7.5.2,<8.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "ta-lib (>=0.6.8,<0.7.0)"
]
